--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=lab1
-spring.datasource.url=jdbc:h2:mem:lab1
-spring.datasource.username=emt
-spring.datasource.password=emt
-
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.url=jdbc:h2:mem:lab1
+#spring.datasource.username=emt
+#spring.datasource.password=emt
+#
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -13,3 +13,13 @@ springdoc.swagger-ui.enabled=true
 
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/emtdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:schema.sql
